--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,14 @@
 <body>
   <app-root></app-root>
 </body>
+<style type="text/css">
+  .amap-logo {
+    display: none;
+    opacity: 0 !important;
+  }
+
+  .amap-copyright {
+    opacity: 0;
+  }
+</style>
 </html>
